04-ingress-and-scaling/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
  labels:
    app: hello-world
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - name: hello-world
        image: helloworld:v2
        ports:
        - containerPort: 8080
        imagePullPolicy: IfNotPresent
